overflow projects fixes

--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -38,7 +38,25 @@
     }
   }
   :global(.body) {
+    height: 1.5em;
     padding: 1em;
+    transition: height 0.3s ease-out 0s;
+    width: 55vw;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.5em;
+    font-weight: 300;
+    font-size: 0.9em;
+  }
+  &:hover {
+    :global(.body) {
+      height: 100px;
+      transition: height 0.1s ease-out 0s;
+      white-space: normal;
+      overflow: visible;
+      width: calc(100% - 2em);
+    }
   }
   h4 {
     margin: 0;
@@ -47,17 +65,11 @@
   sub {
     font-weight: 500;
   }
-  p {
-    line-height: 1.5em;
-    margin: 0;
-    font-weight: 300;
-    font-size: 0.9em;
-  }
 }
 
 @media screen and (min-width: 1024px) {
   .project {
-    p {
+    :global(.body) {
       font-size: 1em;
     }
   }
@@ -68,7 +80,7 @@
     h4 {
       font-size: 1.2em;
     }
-    p {
+    :global(.body) {
       font-size: 1.1em;
     }
   }
